--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: black;
+    margin: 0;
+    height: 100%;
+    
+}
+.background-gradient{
+    /* height: 100%; */
+    background-image: url('/assets/bluela-2.svg');
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-position: bottom left;
+    /* background-position: center; */
+}
 .notification-card{
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.20) 27.5%, rgba(22, 93, 255, 0.16) 157.71%), #FFF;
     box-shadow: 0px 0.7px 0.7px 0px rgba(0, 0, 0, 0.04), 0px 2.8px 7px 0px rgba(0, 0, 0, 0.04);
@@ -11,4 +25,7 @@
 }
 .sign-up-section{
     box-shadow: 0px 14px 64px -4px rgba(24, 39, 75, 0.12), 0px 8px 22px -6px rgba(24, 39, 75, 0.12);
+}
+.testimonial-card-shadow{
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.04), 0px 4px 10px 0px rgba(0, 0, 0, 0.04);
 }
